ext backed chrome connection (cherry-picked from 3d39927)